# potlib

./: .gitignore  .pre-commit-config.yaml  LICENSE  Readme.org  environment.yml  meson.build  meson_options.txt  pixi.toml
.github/workflows/: build_test.yml  pre_commit.yml
CppCore/: Potential.hpp  meson.build  pot_types.hpp
CppCore/LennardJones/: LJPot.cc  LJPot.hpp
CppCore/examples/: call_cuh2.cc  calling_cuh2.cc  calling_ljpot.cc  eigen_call_cuh2.cc  eigen_call_ljpot.cc  xt_call_cuh2.cc
CppCore/gtests/: CuH2PotTest.cc
CppCore/rgpot/: Potential.hpp  base_types.hpp  pot_types.hpp
CppCore/rgpot/CuH2/: CuH2Pot.cc  CuH2Pot.hpp  cuh2Utils.cc  cuh2Utils.hpp  meson.build  tmp.con  tmp_tiny.con
CppCore/rgpot/LennardJones/: LJPot.cc  LJPot.hpp  meson.build
CppCore/rgpot/rpc/: Potentials.capnp  meson.build  pyclient.py  server.cpp
CppCore/rgpot/types/: AtomMatrix.hpp
CppCore/rgpot/types/adapters/: eigen.hpp  xtensor.hpp
CppCore/src/: base_types.hpp  pot_types.hpp
CppCore/src/CuH2/: CuH2Pot.cc  CuH2Pot.hpp  eam_isoc.f90  eamroutines.f90  main.f90  meson.build  tmp.con  tmp_tiny.con
CppCore/src/LennardJones/: LJPot.cc  LJPot.hpp  meson.build
CppCore/tests/: CuH2PotTest.cc  cuh2UtilsTest.cc
subprojects/: fortcuh2.wrap  readcon.wrap
